learning-kubernetes/mongo-express-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: default
spec:
  rules:
  - host: dashboard.com
    http:
      paths:
      - path: /
        backend:
          serviceName: mongo-express-service
          servicePort: 8081
